po: update po/sr_RS@latin/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/admin.po
+++ b/po/sr_RS@latin/admin.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-31 16:18+0000\n"
+"PO-Revision-Date: 2016-11-02 14:06+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -133,7 +133,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Job.php
 msgid "Run frequency"
-msgstr ""
+msgstr "Učestalost pokretanja"
 
 #: CRM/Admin/Form/Job.php
 msgid "Command parameters"
@@ -280,7 +280,7 @@ msgstr ""
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Used For?"
-msgstr ""
+msgstr "Koristi se za?"
 
 #: CRM/Admin/Form/MailSettings.php
 msgid ""
@@ -564,15 +564,15 @@ msgstr ""
 
 #: CRM/Admin/Form/PdfFormats.php
 msgid "Selected PDF Page Format has been deleted."
-msgstr ""
+msgstr "Odabrani format PDF stranice je obrisan."
 
 #: CRM/Admin/Form/PdfFormats.php
 msgid "Your new PDF Page Format titled <strong>%1</strong> has been saved."
-msgstr ""
+msgstr "Vaš novi format PDF stranice pod nazivom <strong>%1</strong> je sačuvan."
 
 #: CRM/Admin/Form/PdfFormats.php
 msgid "Your PDF Page Format titled <strong>%1</strong> has been updated."
-msgstr ""
+msgstr "Vaš novi format PDF stranice pod nazivom <strong>%1</strong> je ažuriran."
 
 #: CRM/Admin/Form/Persistent.php CRM/Admin/Page/Persistent.php
 msgid "DB Template Strings"
@@ -753,7 +753,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Display.php
 msgid "Input Format"
-msgstr ""
+msgstr "Format unosa"
 
 #: CRM/Admin/Form/Preferences/Event.php
 msgid "CiviEvent Component Settings"
@@ -1587,7 +1587,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Tag.php templates/CRM/Admin/Page/Tag.tpl
 msgid "Tag Set"
-msgstr ""
+msgstr "Tag set"
 
 #: CRM/Admin/Form/Tag.php
 msgid ""
@@ -1597,7 +1597,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Tag.php
 msgid "You do not have sufficient permission to delete this reserved tag."
-msgstr ""
+msgstr "Nemate dozvolu za brisanje ovog rezervisanog taga"
 
 #: CRM/Admin/Form/Tag.php
 msgid "Selectable?"
@@ -1653,7 +1653,7 @@ msgstr "Da li ste sigurni da želite da isključite ovaj događaj?"
 
 #: CRM/Admin/Page/AJAX.php
 msgid "Are you sure you want to disable this CiviCRM Profile field?"
-msgstr ""
+msgstr "Da li ste sigurni da želite da isključite ovo polje u CiviCRM profilima ?"
 
 #: CRM/Admin/Page/AJAX.php
 msgid ""
@@ -1714,13 +1714,13 @@ msgstr "Korisnici više neće moći da izaberu ovu vrednost pri dodavanju ili ur
 
 #: CRM/Admin/Page/AJAX.php
 msgid "Are you sure you want to disable this Participant Status?"
-msgstr ""
+msgstr "Da li ste sigurni da želite da isključite ovaj status učesnika?"
 
 #: CRM/Admin/Page/AJAX.php
 msgid ""
 "Users will no longer be able to select this value when adding or editing "
 "Participant Status."
-msgstr ""
+msgstr "Korisnici neće više moći da odaberu ovu vrednost kada dodaju ili uređuju status učesnika."
 
 #: CRM/Admin/Page/AJAX.php
 msgid "Are you sure you want to disable this component?"
@@ -1750,15 +1750,15 @@ msgstr ""
 
 #: CRM/Admin/Page/AJAX.php
 msgid "Are you sure you want to disable this membership type?"
-msgstr ""
+msgstr "Da li ste sigurni da želite da isključite ovaj tip članstva?"
 
 #: CRM/Admin/Page/AJAX.php
 msgid "Are you sure you want to disable this membership status rule?"
-msgstr ""
+msgstr "Da li ste sigurni da želite da isključite pravilo za ovaj status članstva?"
 
 #: CRM/Admin/Page/AJAX.php
 msgid "Are you sure you want to disable this price field?"
-msgstr ""
+msgstr "Da li ste sigurni da želite da isključite ovo polje za cenu?"
 
 #: CRM/Admin/Page/AJAX.php
 msgid "Are you sure you want to disable this Group?"
@@ -1804,7 +1804,7 @@ msgstr ""
 
 #: CRM/Admin/Page/AJAX.php
 msgid "Are you sure you want to disable this record?"
-msgstr ""
+msgstr "Da li ste sigurni da želite da isključite ovaj zapis?"
 
 #: CRM/Admin/Page/AJAX.php
 msgid ""
@@ -1919,7 +1919,7 @@ msgstr ""
 
 #: CRM/Admin/Page/Job.php
 msgid "Executed"
-msgstr ""
+msgstr "Urađeno"
 
 #: CRM/Admin/Page/JobLog.php
 msgid "Settings - Scheduled Jobs Log"
@@ -1975,7 +1975,7 @@ msgstr "Obriši podešavanja za mejl"
 
 #: CRM/Admin/Page/Mapping.php
 msgid "Are you sure you want to delete this mapping?"
-msgstr ""
+msgstr "Da li ste sigurni da želite da obrišete ovo mapiranje?"
 
 #: CRM/Admin/Page/Mapping.php
 msgid "This operation cannot be undone."
@@ -2040,7 +2040,7 @@ msgstr ""
 
 #: CRM/Admin/Page/Options.php
 msgid "Option Groups"
-msgstr ""
+msgstr "Grupe opcija"
 
 #: CRM/Admin/Page/Options.php
 msgid "Manage ACL Roles"
@@ -2274,7 +2274,7 @@ msgstr "%1: Poveži se ponovo"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Reconnect"
-msgstr "%Poveži se"
+msgstr "Poveži se"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Disconnect"
@@ -2296,19 +2296,19 @@ msgstr ""
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Connect"
-msgstr ""
+msgstr "%1: Poveži"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Connect"
-msgstr ""
+msgstr "Poveži"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "No available applications"
-msgstr ""
+msgstr "Nema dostupnih aplikacija"
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Application List Unavailable"
-msgstr ""
+msgstr "Lista aplikacija nedostupna"
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Internet Access Required"
@@ -2328,15 +2328,15 @@ msgstr "Ponovno povezivanje..."
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Reconnected"
-msgstr ""
+msgstr "Poveži se ponovo"
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Disconnecting..."
-msgstr ""
+msgstr "Isključivanje..."
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Disconnected"
-msgstr ""
+msgstr "Isključeno"
 
 #: ang/crmCxn/ManageCtrl.js
 msgid ""
