po: update po/hu_HU/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/hu_HU/common-base.po
+++ b/po/hu_HU/common-base.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-10 12:04+0000\n"
+"PO-Revision-Date: 2016-11-02 18:45+0000\n"
 "Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
@@ -26119,7 +26119,7 @@ msgstr "<tr><td> \"%1\" </td><td> \"%2\" </td></tr>"
 msgid ""
 "The Following Option Values contain value fields that do not match the Data Type of the Option Group</p>\n"
 "        <p><table><tbody><th>Option Group</th><th>Option Value</th></tbody><tbody>"
-msgstr ""
+msgstr "A következő opció értékek olyan érték mezőt tartalmaz, amely nem egyezik meg az opció csoport adat típusával <p>\n        <p><table><tbody><th>opció csoport</th><th>opció érték</th></tbody><tbody>"
 
 #: CRM/Utils/Check/Component/OptionGroups.php
 msgid "</tbody></table></p>"
@@ -26127,7 +26127,7 @@ msgstr "</tbody></table></p>"
 
 #: CRM/Utils/Check/Component/OptionGroups.php
 msgid "Option Values with problematic Values"
-msgstr ""
+msgstr "Problématikus értékű opció értékek"
 
 #: CRM/Utils/Check/Component/Security.php
 msgid "Private Files Readable"
@@ -26146,11 +26146,11 @@ msgid ""
 "Warning: External profile support (aka \"HTML Snippet\" support) is enabled "
 "in <a href=\"%1\">system settings</a>. This setting may be prone to abuse. "
 "If you must retain it, consider HTTP throttling or other protections."
-msgstr ""
+msgstr "Figyelmeztetés: Külső  profil támogatás (u.n.  \"HTML Snippet\" támogatás) engedélyezett a <a href=\"%1\">rendszer beállításokban</a>. Ez a beállítás lehetőséget ad a visszaélésekre. Ha így kell hagynia, fontolja meg a HTTP korlátozást, vagy más védelem alkalmazását. "
 
 #: CRM/Utils/Check/Component/Security.php
 msgid "Remote Profiles Enabled"
-msgstr ""
+msgstr "Távoli profilok engedélyezve"
 
 #: CRM/Utils/Check.php
 msgid "View details and manage alerts"
@@ -26186,7 +26186,7 @@ msgstr "Rendszerállapot: OK"
 
 #: CRM/Utils/OpenFlashChart.php
 msgid "Yearly (Fiscal)"
-msgstr ""
+msgstr "Éves (Pénzügyi)"
 
 #: CRM/Utils/OpenFlashChart.php
 msgid "%1"
@@ -26194,7 +26194,7 @@ msgstr "%1"
 
 #: CRM/Utils/ReCAPTCHA.php
 msgid "Please go back and complete the CAPTCHA at the bottom of this form."
-msgstr ""
+msgstr "Kérem lépjen vissza és töltse ki a CAPTCHA-t az űrlap alján."
 
 #: CRM/Utils/Rule.php
 msgid ""
@@ -26228,23 +26228,23 @@ msgstr "Beilleszt"
 
 #: js/crm.searchForm.js
 msgid "Confirm action"
-msgstr ""
+msgstr "Intézkedés megerősítése"
 
 #: js/jquery/jquery.dashboard.js
 msgid "Expand"
-msgstr ""
+msgstr "Kibont"
 
 #: js/jquery/jquery.dashboard.js
 msgid "Collapse"
-msgstr ""
+msgstr "Összecsuk"
 
 #: js/jquery/jquery.dashboard.js
 msgid "You can re-add it by clicking the \"Configure Your Dashboard\" button."
-msgstr ""
+msgstr "Újra hozzáadhatja \"Vezérlőpultjának beállítása\" gombra kattintva."
 
 #: js/jquery/jquery.dashboard.js
 msgid "\"%1\" Removed"
-msgstr ""
+msgstr "\"%1\" Eltávolítva"
 
 #: js/model/crm.uf.js
 msgid "(Copy)"
@@ -26265,7 +26265,7 @@ msgid ""
 "contact. Any custom data associated with de-selected subtype will be removed"
 " as long as the contact does not have a contact subtype still selected. "
 "Click OK to proceed, or Cancel to review your changes before saving."
-msgstr ""
+msgstr "Ennél a kapcsolatnál a listából egy vagy több kapcsolat altípus kiválasztása megszűnt. Bármilyen egyedi adat ami a megszűnt altípushoz tartozott, eltávolításra kerül. Kattintson az Igen-re a továbblépéshez, vagy a Mégsem-re a változtatások áttekintésére a mentés előtt."
 
 #: templates/CRM/Contact/Form/DedupeFind.tpl
 msgid ""
@@ -26273,7 +26273,7 @@ msgid ""
 "      If you limit by group then it will look for matches with that group both inside and outside of the group.\n"
 "      You can also limit the contacts in the group to be matched by specifying the number of contacts to match. This can be done in conjunction with a group or separately and is recommended for performance reasons.\n"
 "    "
-msgstr ""
+msgstr "Duplikátumokat kereshet az összes kapcsolatban, vagy korlátozhatja az eredmények számát a jobb teljesítmény kedvéért.\nHa csoport szerint korlátozza a keresést, egyezéseket fog keresni csoporttal a csoporton belül és kívül.\nHasonlóképpen korlátozhatja a csoporton belüli kapcsolat egyezéseket, megadva az egyező kapcsolatok számát. Ezt megteheti a a csoporttal kapcsolatosan vagy  különállóan is és ez a teljesítmény okán javasolt is."
 
 #: templates/CRM/Contact/Form/Domain.tpl
 msgid ""
@@ -26335,15 +26335,15 @@ msgstr "Eredmények kijelzési beállításai"
 
 #: templates/CRM/Contact/Form/Task/PDFLetterCommon.hlp
 msgid "Select a pre-existing template, or upload a document for mail merge."
-msgstr ""
+msgstr "Válassza ki az előre elkészített sablont, vagy töltsön fel egy dokumentumot a körlevélhez."
 
 #: templates/CRM/Contact/Form/Task/PDFLetterCommon.hlp
 msgid "Supported file formats: %1"
-msgstr ""
+msgstr "Támogatott fájl formátumok: %1"
 
 #: templates/CRM/Contact/Form/Task/PDFLetterCommon.tpl
 msgid "Preview Document"
-msgstr ""
+msgstr "Dokumentum előnézet"
 
 #: templates/CRM/Contact/Form/Task/PDFLetterCommon.tpl
 msgid "Downloading..."
@@ -26351,11 +26351,11 @@ msgstr "Letöltés..."
 
 #: templates/CRM/Contact/Form/Task/Print.tpl
 msgid "Do Not mail"
-msgstr ""
+msgstr "Nem kér emailt"
 
 #: templates/CRM/Contact/Page/Dashlet.tpl
 msgid "Remove Permanently?"
-msgstr ""
+msgstr "Véglegesen eltávolítja?"
 
 #: templates/CRM/Contact/Page/DedupeException.tpl
 #: templates/CRM/Contact/Page/DedupeFind.tpl
@@ -26452,7 +26452,7 @@ msgid ""
 "Warning: You have chosen to remove one or more subtypes. This will cause any"
 " custom data records associated with those subtypes to be removed as long as"
 " the contact does not have a contact subtype still selected."
-msgstr ""
+msgstr "Figyelmeztetés: Egy vagy több altípus eltávolítására készül. Az ehhez az altípushoz hozzárendelt összes egyedi adat rekord el lesz távolítva, amíg a kapcsolatnál nincs ez a kapcsolat altípus kiválasztva."
 
 #: templates/CRM/Custom/Form/Optionfields.tpl
 #: templates/CRM/Price/Form/OptionFields.tpl
@@ -26537,11 +26537,11 @@ msgstr "%1 bejegyzés mutatása"
 
 #: templates/CRM/common/navigation.js.tpl
 msgid "%1 not found."
-msgstr ""
+msgstr "%1 nem található."
 
 #: templates/CRM/common/navigation.js.tpl
 msgid "Did you mean to search by Name/Email instead?"
-msgstr ""
+msgstr "Úgy érti, hogy Név/E-mail szerint keressünk inkább?"
 
 #: templates/CRM/common/success.tpl
 msgid "The database will be upgraded from %1 to %2."
@@ -26569,11 +26569,11 @@ msgstr "Relatív dátum szűrők"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Print/Merge Document"
-msgstr ""
+msgstr "Dokumentum nyomtatás/egyesítés"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Export letters and other printable documents."
-msgstr ""
+msgstr "Levelek exportálása és más nyomtatható dokumentumok."
 
 #: xml/templates/civicrm_data.tpl CRM/Upgrade/Incremental/php/FourSeven.php
 msgid "Contact Deleted by Merge"
@@ -26585,7 +26585,7 @@ msgstr "A kapcsolat másik kapcsolattal összefűzve"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Close Accounting Period"
-msgstr ""
+msgstr "Könyvelési periódus lezárása"
 
 #: xml/templates/civicrm_data.tpl CRM/Upgrade/Incremental/php/FourSeven.php
 msgid "Chargeback"
@@ -26637,11 +26637,11 @@ msgstr "Az ismétlődő adományok befizetéseinek egyszerű összegzése az egy
 
 #: xml/templates/civicrm_data.tpl
 msgid "Deferred Revenue Details"
-msgstr ""
+msgstr "Halasztott bevételek részletei"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Deferred Revenue Details Report"
-msgstr ""
+msgstr "Halasztott bevétel részletei jelentés"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Textarea"
@@ -26657,7 +26657,7 @@ msgstr "Visszaterhelési számla"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Deferred Revenue Account is"
-msgstr ""
+msgstr "Halasztott bevétel számla"
 
 #: xml/templates/civicrm_data.tpl
 msgid "This week"
@@ -26897,11 +26897,11 @@ msgstr "Az előző naptári év végétől"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Deferred Revenue - Event Fee"
-msgstr ""
+msgstr "Halasztott bevétel - Rendezvény részvételi díj"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Deferred Revenue - Member Dues"
-msgstr ""
+msgstr "Halasztott bevétel - Tagdíjak"
 
 #: xml/templates/civicrm_data.tpl
 msgid ""
@@ -27030,7 +27030,7 @@ msgid ""
 "By default, CiviCRM now disables the ability to import directly from SQL. To"
 " use this feature, you must explicitly grant permission 'import SQL "
 "datasource'."
-msgstr ""
+msgstr "Alapértelmezetten, most a CiviCRM-nél kikapcsolt a SQL közvetlen import lehetősége. Ezen jellemző használatához, 'Import SQL datasource' jogosultságot engedélyezni kell az adatbázisban."
 
 #: CRM/Upgrade/Incremental/php/FourSeven.php
 msgid "Migrate Settings to %1"
@@ -27038,16 +27038,16 @@ msgstr "Beállítások migrálása %1 "
 
 #: CRM/Upgrade/Incremental/php/FourSeven.php
 msgid "Upgrade Add Help Pre and Post Fields to price value table"
-msgstr ""
+msgstr "Frissítse az ár értéktáblázat Hozzáad Elő és Utó Súgó mezőket."
 
 #: CRM/Upgrade/Incremental/php/FourSeven.php
 msgid "Alter index and type for image URL"
-msgstr ""
+msgstr "Módosítsa a kép URL indexet és típust"
 
 #: CRM/Upgrade/Incremental/php/FourSeven.php
 msgid "Fill in setting \"remote_profile_submissions\""
-msgstr ""
+msgstr "Töltse ki \"remote_profile_submissions\" beállítást"
 
 #: CRM/Upgrade/Incremental/php/FourSeven.php
 msgid "Add Data Type column to civicrm_option_group"
-msgstr ""
+msgstr "Adja hozzá a civicrm_option_group -hoz az adattípus oszlopot"
