--- a/po/sr_RS@latin/event.po
+++ b/po/sr_RS@latin/event.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-27 19:25+0000\n"
+"PO-Revision-Date: 2016-11-02 15:14+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -67,11 +67,11 @@ msgstr ""
 
 #: CRM/Event/BAO/Query.php
 msgid "Include Repeating Events"
-msgstr ""
+msgstr "Uključi događaje koji se ponavljaju"
 
 #: CRM/Event/BAO/Query.php
 msgid "Participant is a Test"
-msgstr ""
+msgstr "Učesnik je test"
 
 #: CRM/Event/BAO/Query.php CRM/Event/DAO/Participant.php
 msgid "Fee level"
@@ -83,7 +83,7 @@ msgstr ""
 
 #: CRM/Event/BAO/Query.php
 msgid "Participant is a Test?"
-msgstr ""
+msgstr "Učesnik je test?"
 
 #: CRM/Event/BAO/Query.php
 msgid "Participant is Pay Later?"
@@ -115,13 +115,13 @@ msgstr "Ako imate kod za popust, unesite ga ovde"
 
 #: CRM/Event/Cart/Form/Checkout/ParticipantsAndPrices.php
 msgid "Select at least one option from Price Levels."
-msgstr ""
+msgstr "Izaberite bar jednu opciju iz nivoa cena."
 
 #: CRM/Event/Cart/Form/Checkout/ParticipantsAndPrices.php
 msgid ""
 "Price Levels can not be less than zero. Please select the options "
 "accordingly"
-msgstr ""
+msgstr "Nivo cena ne može biti manji od 0. Izaberite adekvatne opcije"
 
 #: CRM/Event/Cart/Form/Checkout/ParticipantsAndPrices.php
 msgid "The participant %1 is already registered for %2 (%3)."
@@ -142,11 +142,11 @@ msgstr ""
 
 #: CRM/Event/Cart/Form/Checkout/Payment.php
 msgid "Payment Completed"
-msgstr ""
+msgstr "Uplata završena"
 
 #: CRM/Event/Cart/Form/Checkout/Payment.php
 msgid "Complete Transaction"
-msgstr ""
+msgstr "Kompletiraj transakciju"
 
 #: CRM/Event/Cart/Form/Checkout/Payment.php
 msgid "Alternative Payment Type"
@@ -189,7 +189,7 @@ msgstr ""
 
 #: CRM/Event/DAO/Event.php
 msgid "Is Event Public"
-msgstr ""
+msgstr "Da li je ovo javni događaj"
 
 #: CRM/Event/DAO/Event.php
 msgid "Is Online Registration"
@@ -201,11 +201,11 @@ msgstr ""
 
 #: CRM/Event/DAO/Event.php CRM/Event/Form/ManageEvent/Registration.php
 msgid "Registration Start Date"
-msgstr ""
+msgstr "Datum početka registracije"
 
 #: CRM/Event/DAO/Event.php CRM/Event/Form/ManageEvent/Registration.php
 msgid "Registration End Date"
-msgstr ""
+msgstr "Datum kraja registracije"
 
 #: CRM/Event/DAO/Event.php templates/CRM/Event/Form/Registration/Confirm.tpl
 #: templates/CRM/Event/Form/Registration/ThankYou.tpl
@@ -234,7 +234,7 @@ msgstr ""
 
 #: CRM/Event/DAO/Event.php
 msgid "Confirm Text"
-msgstr ""
+msgstr "Potvrdi tekst"
 
 #: CRM/Event/DAO/Event.php
 msgid "Is confirm email"
@@ -310,7 +310,7 @@ msgstr ""
 
 #: CRM/Event/DAO/Event.php
 msgid "Expiration Time"
-msgstr ""
+msgstr "Datum isteka"
 
 #: CRM/Event/DAO/Event.php templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid "Waitlist Text"
@@ -334,7 +334,7 @@ msgstr ""
 
 #: CRM/Event/DAO/Event.php
 msgid "Event Created Date"
-msgstr ""
+msgstr "Datum kreiranja događaja"
 
 #: CRM/Event/DAO/Event.php
 msgid "Is the booking confirmation screen enabled?"
@@ -358,7 +358,7 @@ msgstr ""
 
 #: CRM/Event/DAO/Participant.php
 msgid "Register date"
-msgstr ""
+msgstr "Datum registracije"
 
 #: CRM/Event/DAO/Participant.php
 msgid "Participant Source"
@@ -802,7 +802,7 @@ msgstr "Novi događaj"
 #: CRM/Event/Form/ManageEvent.php CRM/Event/Page/ManageEvent.php
 #: templates/CRM/Event/Page/DashBoard.tpl
 msgid "Manage Events"
-msgstr ""
+msgstr "Menadžment događaja"
 
 #: CRM/Event/Form/ManageEvent.php
 msgid "Manage Event Templates"
