po: update po/sr_RS@latin/member.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/member.po
+++ b/po/sr_RS@latin/member.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-31 14:04+0000\n"
+"PO-Revision-Date: 2016-11-02 13:35+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -48,7 +48,7 @@ msgstr "ne importuj"
 
 #: CRM/Member/BAO/Membership.php
 msgid "Membership Fields"
-msgstr ""
+msgstr "Članstvo - polja"
 
 #: CRM/Member/BAO/Membership.php
 msgid "Invalid date \"%1\" (must have form yyyy-mm-dd)."
@@ -77,17 +77,17 @@ msgstr ""
 
 #: CRM/Member/BAO/Membership.php
 msgid "Processed %1 membership records. Updated %2 records."
-msgstr ""
+msgstr "Procesuirano %1 zapisa o članstvu. Ažurirano %2 zapisa."
 
 #: CRM/Member/BAO/MembershipStatus.php
 msgid ""
 "This membership status cannot be deleted as memberships exist with this "
 "status"
-msgstr ""
+msgstr "Ovaj status članstva ne može biti obrisan, zato što je prisutno članstvo sa ovim statusom."
 
 #: CRM/Member/BAO/MembershipType.php
 msgid "This membership type cannot be deleted due to following reason(s):"
-msgstr ""
+msgstr "Ovaj tip članstva ne može biti obrisan iz sledećeg(sledećih) razloga:"
 
 #: CRM/Member/BAO/MembershipType.php
 msgid ""
@@ -97,7 +97,7 @@ msgid ""
 "memberships, there may be contacts in the Trash (deleted) with this "
 "membership type. Try using <a href=\"%2\">Advanced Search</a> and checking "
 "\"Search in Trash\"."
-msgstr ""
+msgstr "%3. Postoje kontakti kojima je dodeljen ovaj tip članstva. Pretražite kontakte sa ovim tipom članstva koristeći <a href='%1'>Pronađi člana</a>. Ukoliko i dalje dobijate ovu poruku nakon brisanja ovog članstva, možda postoje kontakti u kanti (obrisani) sa ovim tipom članstva. Koristite <a href=\"%2\">Napredna pretraga</a> i štiklirajte \"Pretraži u kanti\""
 
 #: CRM/Member/BAO/MembershipType.php
 msgid ""
