po: update po/sr_RS@latin/provinces.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/provinces.po
+++ b/po/sr_RS@latin/provinces.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-01 11:05+0000\n"
+"PO-Revision-Date: 2016-11-02 07:11+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -2883,111 +2883,111 @@ msgstr "Peking"
 
 msgctxt "province"
 msgid "Chongqing"
-msgstr ""
+msgstr "Čungking"
 
 msgctxt "province"
 msgid "Shanghai"
-msgstr ""
+msgstr "Šangaj"
 
 msgctxt "province"
 msgid "Tianjin"
-msgstr ""
+msgstr "Tjencin"
 
 msgctxt "province"
 msgid "Anhui"
-msgstr ""
+msgstr "Anhuej"
 
 msgctxt "province"
 msgid "Fujian"
-msgstr ""
+msgstr "Fuđen"
 
 msgctxt "province"
 msgid "Gansu"
-msgstr ""
+msgstr "Gansu"
 
 msgctxt "province"
 msgid "Guangdong"
-msgstr ""
+msgstr "Guangdžou"
 
 msgctxt "province"
 msgid "Guizhou"
-msgstr ""
+msgstr "Guejdžou"
 
 msgctxt "province"
 msgid "Hainan"
-msgstr ""
+msgstr "Hajnan"
 
 msgctxt "province"
 msgid "Hebei"
-msgstr ""
+msgstr "Hebej"
 
 msgctxt "province"
 msgid "Heilongjiang"
-msgstr ""
+msgstr "Hejlungđang"
 
 msgctxt "province"
 msgid "Henan"
-msgstr ""
+msgstr "Henan"
 
 msgctxt "province"
 msgid "Hubei"
-msgstr ""
+msgstr "Hubej"
 
 msgctxt "province"
 msgid "Hunan"
-msgstr ""
+msgstr "Hunan"
 
 msgctxt "province"
 msgid "Jiangsu"
-msgstr ""
+msgstr "Đangsu"
 
 msgctxt "province"
 msgid "Jiangxi"
-msgstr ""
+msgstr "Đangsi"
 
 msgctxt "province"
 msgid "Jilin"
-msgstr ""
+msgstr "Đilin"
 
 msgctxt "province"
 msgid "Liaoning"
-msgstr ""
+msgstr "Ljaoning"
 
 msgctxt "province"
 msgid "Qinghai"
-msgstr ""
+msgstr "Ćinghaj"
 
 msgctxt "province"
 msgid "Shaanxi"
-msgstr ""
+msgstr "Šensi"
 
 msgctxt "province"
 msgid "Shandong"
-msgstr ""
+msgstr "Šandung"
 
 msgctxt "province"
 msgid "Shanxi"
-msgstr ""
+msgstr "Šansi"
 
 msgctxt "province"
 msgid "Sichuan"
-msgstr ""
+msgstr "Sičuan"
 
 msgctxt "province"
 msgid "Taiwan"
-msgstr ""
+msgstr "Tajvan"
 
 msgctxt "province"
 msgid "Yunnan"
-msgstr ""
+msgstr "Junan"
 
 msgctxt "province"
 msgid "Zhejiang"
-msgstr ""
+msgstr "Đegang"
 
 msgctxt "province"
 msgid "Guangxi"
-msgstr ""
+msgstr "Guangsi"
 
 msgctxt "province"
 msgid "Neia Mongol (mn)"
@@ -2995,7 +2995,7 @@ msgstr ""
 
 msgctxt "province"
 msgid "Xinjiang"
-msgstr ""
+msgstr "Sinkjang"
 
 msgctxt "province"
 msgid "Xizang"
@@ -3003,11 +3003,11 @@ msgstr ""
 
 msgctxt "province"
 msgid "Hong Kong"
-msgstr ""
+msgstr "Hong Kong"
 
 msgctxt "province"
 msgid "Macau"
-msgstr ""
+msgstr "Makao"
 
 msgctxt "province"
 msgid "Distrito Capital de Bogotá"
