po: update po/fr_CA/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_CA/common-base.po
+++ b/po/fr_CA/common-base.po
@@ -27,7 +27,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-02 18:39+0000\n"
+"PO-Revision-Date: 2016-11-03 20:25+0000\n"
 "Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -6357,7 +6357,7 @@ msgstr "Il n'y a pas de configuration sendmail valide. Cliquez <a href='%1'>Admi
 msgid ""
 "Outbound mail has been disabled. Click <a href='%1'>Administer >> System "
 "Setting >> Outbound Email</a> to set the OutBound Email."
-msgstr "Les courriels sortant sont désactivés. Cliquez <a href='%1'>Administrer>> Paramètre systeme >> Courrier Sortant</a> pour configurer le courriel sortant"
+msgstr "L'envoi de courriel a été désactivé. Cliquez sur <a href='%1'> Administrer >> Paramètres système >> Courrier sortant</a> pour définir les paramètres."
 
 #: CRM/Core/Config.php
 msgid ""
@@ -12612,7 +12612,7 @@ msgstr "Mode de débogage"
 msgid ""
 "Warning: Outbound email is disabled in <a href=\"%1\">system settings</a>. "
 "Proper settings should be enabled on production servers."
-msgstr "Avertissement : la messagerie sortante est désactivée dans les <a href=\"%1\">paramètres du système</a>. Vous devez activer les paramètres appropriés sur les serveurs de production."
+msgstr "Avertissement: L'envoi de courriel est déactivé dans les <a href=\"%1\">paramètres du système</a>. Les paramètres appropriés doivent être activés sur les serveurs de production."
 
 #: CRM/Utils/Check/Env.php
 msgid "Outbound Email Settings"
@@ -25805,7 +25805,7 @@ msgstr ""
 msgid ""
 "This system uses PHP version %1 which meets or exceeds the minimum "
 "recommendation of %2."
-msgstr ""
+msgstr "Ce système utilise la version PHP %1 qui répond ou dépasse la recommandation minimale, version: %2."
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "PHP Up-to-Date"
@@ -25816,7 +25816,7 @@ msgid ""
 "This system uses PHP version %1. While this meets the minimum requirements "
 "for CiviCRM to function, upgrading to PHP version %2 or newer is recommended"
 " for maximum compatibility."
-msgstr ""
+msgstr "Ce système utilise la version %1 de PHP. Bien que cela répond aux exigences minimales requises pour que CiviCRM puisse fonctionner, il est recommandé d'effectuer une mise à niveau vers la version de PHP %2 ou plus récente pour une compatibilité maximale."
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "PHP Out-of-Date"
@@ -25827,7 +25827,7 @@ msgid ""
 "This system uses PHP version %1. CiviCRM can be installed on this version, "
 "but some specific features are known to fail or degrade. Version %3 is the "
 "bare minimum to avoid known issues, and version %2 is recommended."
-msgstr ""
+msgstr "Ce système utilise la version %1 de PHP. CiviCRM peut être installé sur cette version, mais certaines fonctionnalités spécifiques sont connues pour échouer ou se dégrader. La version %3 est le strict minimum pour éviter les problèmes connus, et la version %2 est recommandée."
 
 #: CRM/Utils/Check/Component/Env.php
 msgid ""
@@ -25850,7 +25850,7 @@ msgstr ""
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "Outbound Email Disabled"
-msgstr ""
+msgstr "Envoi de courriel déactivé"
 
 #: CRM/Utils/Check/Component/Env.php
 msgid ""
@@ -25914,7 +25914,7 @@ msgstr ""
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "Directory %1 is not writable.  Please change your file permissions."
-msgstr ""
+msgstr "Le répertoire %1 n'est pas accessible en écriture. Veuillez modifier les droits d'accès à ce répertoire."
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "Directory not writable"
@@ -26160,11 +26160,11 @@ msgid ""
 "Warning: External profile support (aka \"HTML Snippet\" support) is enabled "
 "in <a href=\"%1\">system settings</a>. This setting may be prone to abuse. "
 "If you must retain it, consider HTTP throttling or other protections."
-msgstr ""
+msgstr "Avertissement: Le support des profils externes (également appelé \"HTML Snippet\") est activé dans les <a href=\"%1\">Paramètres système</a>. Cette option peut mener à des abus. Si vous devez le conserver, envisager le \"HTTP throttling\" ou d'autres protections."
 
 #: CRM/Utils/Check/Component/Security.php
 msgid "Remote Profiles Enabled"
-msgstr ""
+msgstr "Profils distants activés"
 
 #: CRM/Utils/Check.php
 msgid "View details and manage alerts"
@@ -26172,27 +26172,27 @@ msgstr ""
 
 #: CRM/Utils/Check.php
 msgid "System Status: Emergency"
-msgstr ""
+msgstr "État du système: Urgence"
 
 #: CRM/Utils/Check.php
 msgid "System Status: Alert"
-msgstr ""
+msgstr "État du système: Alerte"
 
 #: CRM/Utils/Check.php
 msgid "System Status: Critical"
-msgstr ""
+msgstr "État du système: Critique"
 
 #: CRM/Utils/Check.php
 msgid "System Status: Error"
-msgstr ""
+msgstr "État du système: Erreur"
 
 #: CRM/Utils/Check.php
 msgid "System Status: Warning"
-msgstr ""
+msgstr "État du système: Avertissement "
 
 #: CRM/Utils/Check.php
 msgid "System Status: Notice"
-msgstr ""
+msgstr "État du système: Avis "
 
 #: CRM/Utils/Check.php
 msgid "System Status: Ok"
