--- a/po/fr_CA/admin.po
+++ b/po/fr_CA/admin.po
@@ -25,7 +25,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-02 18:53+0000\n"
+"PO-Revision-Date: 2016-11-03 19:30+0000\n"
 "Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -6569,7 +6569,7 @@ msgstr ""
 
 #: ang/crmStatusPage/StatusPage.html
 msgid "CiviCRM System Status"
-msgstr ""
+msgstr "CiviCRM État du système"
 
 #: ang/crmStatusPage/StatusPage.html
 msgid "Hidden"
@@ -6723,7 +6723,7 @@ msgstr ""
 msgid ""
 "If enabled, CiviCRM will allow users to submit profiles from external sites."
 " This is disabled by default to limit abuse."
-msgstr ""
+msgstr "If activé, CiviCRM permet aux utilisateurs de soumettre des profils depuis des sites externes. Déactivé par défaut pour limiter les abus."
 
 #: templates/CRM/Admin/Form/Setting/Path.hlp
 msgid "Path Variables"
