--- a/po/fr_CA/menu.po
+++ b/po/fr_CA/menu.po
@@ -19,7 +19,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-21 18:22+0000\n"
+"PO-Revision-Date: 2016-11-03 19:19+0000\n"
 "Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -2196,7 +2196,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "System Status"
-msgstr ""
+msgstr "État du système"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
