--- a/po/af_ZA/admin.po
+++ b/po/af_ZA/admin.po
@@ -4,13 +4,14 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Piotr Szotkowski <chastell@chastell.net>, 2011
-# Thabo Pienaar <umfundise@gmail.com>, 2016
+# umfundise aka Thabo <umfundise@gmail.com>, 2016
+# umfundise aka Thabo <umfundise@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-11-04 13:10+0000\n"
+"Last-Translator: umfundise aka Thabo <umfundise@gmail.com>\n"
 "Language-Team: Afrikaans (http://www.transifex.com/civicrm/civicrm/language/af/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -20,7 +21,7 @@ msgstr ""
 
 #: CRM/Admin/Form/ContactType.php
 msgid "Basic Contact Type"
-msgstr ""
+msgstr "Basiese Kontak Tipe"
 
 #: CRM/Admin/Form/ContactType.php
 msgid ""
