--- a/po/ca_ES/common-base.po
+++ b/po/ca_ES/common-base.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-02 13:55+0000\n"
+"PO-Revision-Date: 2016-11-04 21:14+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -10599,7 +10599,7 @@ msgstr "Conjunt personalitzat"
 #: CRM/Custom/Page/Option.php CRM/Price/Page/Option.php
 #: templates/CRM/Custom/Form/Option.tpl
 msgid "Edit Option"
-msgstr "Edita una opció"
+msgstr "Edita l'opció"
 
 #: CRM/Custom/Page/Option.php
 msgid "Edit Multiple Choice Option"
