po: update po/bg_BG/install.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/bg_BG/install.po
+++ b/po/bg_BG/install.po
@@ -3,12 +3,12 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Mathieu Lutfy <mathieu@bidon.ca>, 2015
+# Mathieu Lutfy <mathieu@bidon.ca>, 2015-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
+"PO-Revision-Date: 2016-11-04 22:03+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Bulgarian (http://www.transifex.com/civicrm/civicrm/language/bg/)\n"
 "MIME-Version: 1.0\n"
@@ -29,7 +29,7 @@ msgstr ""
 
 #: install/index.php
 msgid "Oops! CiviCRM is already installed"
-msgstr ""
+msgstr "CiviCRM вече е инсталиран"
 
 #: install/index.php
 msgid "[your Drupal root directory]"
@@ -425,7 +425,7 @@ msgstr ""
 
 #: install/index.php
 msgid "CiviCRM has been successfully installed"
-msgstr ""
+msgstr "CiviCRM е успешно инсталирана"
 
 #: install/index.php
 msgid ""
@@ -459,7 +459,7 @@ msgstr "Инсталирането на CiviCRM"
 
 #: install/template.html
 msgid "Version %1"
-msgstr ""
+msgstr "Версия %1"
 
 #: install/template.html
 msgid ""
@@ -478,7 +478,7 @@ msgid ""
 "There are some issues that we recommend you look at before installing, "
 "however, you are still able to install the software.  Please see below for "
 "details."
-msgstr ""
+msgstr "Има някои въпроси, които Ви препоръчваме да погледнете преди да се инсталира, обаче, можете да инсталирате софтуера. Моля, вижте по-долу за повече подробности."
 
 #: install/template.html
 msgid "You're ready to install!"
@@ -507,7 +507,7 @@ msgid ""
 "in that language. The initial configuration of the basic data will also be "
 "set to that language (ex: individual prefixes, suffixes, activity types, "
 "etc.). <a href=\"%1\">Learn more about using CiviCRM in other languages.</a>"
-msgstr ""
+msgstr "CiviCRM е преведена на много езици, благодарение на своята общност от преводачи. С избирането на друг език, инсталаторът може да бъде на разположение на този език. Първоначалната конфигурация на основните данни също ще бъдат на този език (например: отделните представки, наставки, вида дейност, и т.н.). <a href=\"%1\">Научете повече за използването CiviCRM в други езици. </a>"
 
 #: install/template.html
 msgid "Language of basic data:"
@@ -543,7 +543,7 @@ msgstr ""
 
 #: install/template.html
 msgid "CiviCRM Database Settings"
-msgstr ""
+msgstr "Настройки на база данни за CiviCRM"
 
 #: install/template.html
 msgid "MySQL server:"
@@ -563,11 +563,11 @@ msgstr ""
 
 #: install/template.html
 msgid "Drupal Database Settings"
-msgstr ""
+msgstr "Настройки на база данни за Drupal"
 
 #: install/template.html
 msgid "Other Settings"
-msgstr ""
+msgstr "Други настройки"
 
 #: install/template.html
 msgid "Re-check requirements"
@@ -583,7 +583,7 @@ msgstr ""
 
 #: install/template.html
 msgid "Requirements"
-msgstr ""
+msgstr "Изисквания"
 
 #: install/index.php
 msgid "[your Backdrop root directory]"
