--- a/po/bg_BG/case.po
+++ b/po/bg_BG/case.po
@@ -3,12 +3,13 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Mathieu Lutfy <mathieu@bidon.ca>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
+"PO-Revision-Date: 2016-11-04 22:12+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Bulgarian (http://www.transifex.com/civicrm/civicrm/language/bg/)\n"
 "MIME-Version: 1.0\n"
@@ -346,7 +347,7 @@ msgstr[1] ""
 
 #: CRM/Case/Form/CaseView.php
 msgid "Add Activity"
-msgstr ""
+msgstr "Добавяне на дейност"
 
 #: CRM/Case/Form/CaseView.php
 msgid "Activity Audit"
