--- a/po/es_MX/campaign.po
+++ b/po/es_MX/campaign.po
@@ -5,16 +5,19 @@
 # Translators:
 # Daniel Ramos <ramos9037@gmail.com>, 2016
 # eugeniasoria <eugeniasoria@gmail.com>, 2011
+# eugeniasoria <eugeniasoria@gmail.com>, 2011
+# ixiam_jose <jrombini@hotmail.com>, 2012
 # Joaquín Bravo Contreras <jackbravo@gmail.com>, 2011
 # ixiam_jose <jrombini@hotmail.com>, 2012
+# mario_ARG <mario@winguweb.org>, 2011
 # mario_ARG <mario@winguweb.org>, 2011
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-15 22:20+0000\n"
-"Last-Translator: Daniel Ramos <ramos9037@gmail.com>\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-11-04 21:46+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Spanish (Mexico) (http://www.transifex.com/civicrm/civicrm/language/es_MX/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -36,7 +39,7 @@ msgstr "No hay parámetros para la Encuesta. No se puede procesar."
 
 #: CRM/Campaign/BAO/Petition.php
 msgid "Petition Id and/or Activity Id is not of the type Positive."
-msgstr ""
+msgstr "El Id de la petición y/o de la actividad no es del tipo Positivo"
 
 #: CRM/Campaign/BAO/Query.php
 msgid "Survey - %1"
@@ -78,7 +81,7 @@ msgstr "Participantes afectados"
 
 #: CRM/Campaign/BAO/Survey.php
 msgid "View Survey Report"
-msgstr ""
+msgstr "Ver informe de encuesta"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Campaign Description"
@@ -94,19 +97,19 @@ msgstr "Fecha de Fin de Campaña"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Campaign External ID"
-msgstr ""
+msgstr "ID de Campaña Externa"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Parent Campaign"
-msgstr ""
+msgstr "Campaña principal"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Is Campaign Active?"
-msgstr ""
+msgstr "¿Está activa la campaña?"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Campaign Created By"
-msgstr ""
+msgstr "Campaña creada por"
 
 #: CRM/Campaign/DAO/Campaign.php CRM/Campaign/DAO/Survey.php
 msgid "Campaign Created Date"
@@ -114,11 +117,11 @@ msgstr "Fecha Creación de Campaña"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Campaign Modified By"
-msgstr ""
+msgstr "Campaña modificada por"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Campaign Modified Date"
-msgstr ""
+msgstr "Fecha de modificación de la campaña"
 
 #: CRM/Campaign/DAO/Campaign.php CRM/Campaign/Form/Campaign.php
 msgid "Campaign Goals"
@@ -134,11 +137,11 @@ msgstr "Encuesta de ID"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Survey Campaign ID"
-msgstr ""
+msgstr "ID de la Campaña de Encuesta"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Follow up Interval"
-msgstr ""
+msgstr "Intervalo de seguimiento"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Instructions"
@@ -146,7 +149,7 @@ msgstr "Instrucciones"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Survey Hold Duration"
-msgstr ""
+msgstr "Duración de retención de la encuesta"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Maximum number of contacts"
@@ -158,27 +161,27 @@ msgstr "Numero de contactos por defecto"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Survey Is Active"
-msgstr ""
+msgstr "Encuesta Activa"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Is Default Survey"
-msgstr ""
+msgstr "Encuesta por defecto"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Survey Created By"
-msgstr ""
+msgstr "Encuesta Creada por"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Survey Modified"
-msgstr ""
+msgstr "Encuesta Modificada"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Survey Modified On"
-msgstr ""
+msgstr "Encuesta Modificada el"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "No Email Verification"
-msgstr ""
+msgstr "No hay verificación de Email"
 
 #: CRM/Campaign/Form/Campaign.php
 msgid "Edit Campaign"
@@ -194,7 +197,7 @@ msgstr "Rédito objetivo"
 
 #: CRM/Campaign/Form/Campaign.php
 msgid "Campaign has been deleted."
-msgstr ""
+msgstr "La campaña ha sido eliminada."
 
 #: CRM/Campaign/Form/Campaign.php
 msgid "Campaign %1 has been saved."
@@ -218,7 +221,7 @@ msgstr "GOTV (Seguimiento de votos)"
 msgid ""
 "Oops. It looks like no surveys have been created. <a href='%1'>Click here to"
 " create a new survey.</a>"
-msgstr ""
+msgstr "Ups. No se han creado encuestas. <a href='%1'> Haga clic aquí para crear una nueva encuesta. </a>"
 
 #: CRM/Campaign/Form/Gotv.php CRM/Campaign/Form/Task/Interview.php
 msgid "Could not find Survey."
@@ -273,13 +276,13 @@ msgstr "Es default?"
 msgid ""
 "This title is already associated with the selected activity type. Please "
 "specify a unique title."
-msgstr ""
+msgstr "Este título ya está asociado al tipo de actividad seleccionada. Especifique un título único."
 
 #: CRM/Campaign/Form/Petition.php
 msgid ""
 "This title is already associated with the selected campaign and activity "
 "type. Please specify a unique title."
-msgstr ""
+msgstr "Este título ya está asociado con la campaña y el tipo de actividad seleccionados. Especifique un título único."
 
 #: CRM/Campaign/Form/Petition.php
 msgid " Petition has been deleted."
@@ -319,15 +322,15 @@ msgstr "Encontrar participantes"
 
 #: CRM/Campaign/Form/Survey/Delete.php
 msgid "'%1' survey has been deleted."
-msgstr ""
+msgstr "La encuesta '%1' ha sido eliminada."
 
 #: CRM/Campaign/Form/Survey/Delete.php
 msgid "Delete action is missing expected survey ID."
-msgstr ""
+msgstr "No se ha podido eliminar ya que no se encuentra el ID de la encuesta."
 
 #: CRM/Campaign/Form/Survey/Main.php
 msgid "Configure Survey"
-msgstr ""
+msgstr "Configurar encuesta"
 
 #: CRM/Campaign/Form/Survey/Main.php
 msgid "Survey Dashboard"
@@ -368,16 +371,16 @@ msgstr "Total de contactos reservados debe ser un número positivo"
 msgid ""
 "There are no custom data sets for activity type \"%1\". To create one, <a "
 "href=\"%2\" target=\"%3\">click here</a>."
-msgstr ""
+msgstr "No existen conjuntos de datos personalizados para el tipo de actividad \"%1\". Para crear uno, <a href=\"%2\" target=\"%3\"> haga clic aquí </ a>."
 
 #: CRM/Campaign/Form/Survey/Questions.php
 msgid "Contact Info"
-msgstr ""
+msgstr "Información del contacto"
 
 #: CRM/Campaign/Form/Survey/Questions.php
 #: CRM/Campaign/Form/Survey/TabHeader.php
 msgid "Questions"
-msgstr ""
+msgstr "Preguntas"
 
 #: CRM/Campaign/Form/Survey/Results.php
 msgid "Create new result set"
@@ -399,27 +402,27 @@ msgstr "Intervalo de Recontacto"
 
 #: CRM/Campaign/Form/Survey/Results.php
 msgid "Enter at least one result option."
-msgstr ""
+msgstr "Ingrese al menos una opción de resultado."
 
 #: CRM/Campaign/Form/Survey/Results.php
 msgid "Please select a Survey Result Set."
-msgstr ""
+msgstr "Por favor seleccione un conjunto de resultados para la encuesta."
 
 #: CRM/Campaign/Form/Survey/Results.php
 msgid "A Survey Detail Report <a href='%1'>%2</a> has been created."
-msgstr ""
+msgstr "Un Informe detallado de la encuesta <a href='%1'>%2 </a> se ha creado."
 
 #: CRM/Campaign/Form/Survey/TabHeader.php
 msgid "Main Information"
-msgstr ""
+msgstr "Información principal"
 
 #: CRM/Campaign/Form/Survey.php
 msgid "Configure Survey - %1"
-msgstr ""
+msgstr "Configurar la encuesta - %1"
 
 #: CRM/Campaign/Form/Survey.php
 msgid "'%1' have been saved."
-msgstr ""
+msgstr "'%1' ha sido guardado."
 
 #: CRM/Campaign/Form/SurveyType.php
 msgid "Selected Survey type has been deleted."
@@ -443,7 +446,7 @@ msgstr "Perdón. Parece que no hay una opción de respuesta configurada."
 
 #: CRM/Campaign/Form/Task/Interview.php
 msgid "Order By >>"
-msgstr ""
+msgstr "Ordenar por >>"
 
 #: CRM/Campaign/Form/Task/Interview.php
 msgid "Release Respondents >>"
@@ -480,18 +483,18 @@ msgstr "No se pudo hallar participantes para afectar en esta Encuesta."
 #: CRM/Campaign/Form/Task/Release.php
 msgid "Respondent has been released."
 msgid_plural "%count respondents have been released."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "El encuestado ha sido liberado."
+msgstr[1] "%count encuestados han sido liberados"
 
 #: CRM/Campaign/Form/Task/Release.php
 msgid "Released"
-msgstr ""
+msgstr "Liberado"
 
 #: CRM/Campaign/Form/Task/Release.php
 msgid "1 respondent did not release."
 msgid_plural "%count respondents did not release."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "1 encuestado no ha sido liberado."
+msgstr[1] "%count encuestados no han sido liberados"
 
 #: CRM/Campaign/Form/Task/Reserve.php
 msgid "Could not find Survey Id."
@@ -510,8 +513,8 @@ msgstr "La cantidad máxima de contactos ya ha sido reservada para este entrevis
 msgid "You can reserve a maximum of %count contact at a time for this survey."
 msgid_plural ""
 "You can reserve a maximum of %count contacts at a time for this survey."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Puedes asignar un máximo de %count contacto a la vez para esta encuesta."
+msgstr[1] "Puedes asignar un máximo de %count contactos a la vez para esta encuesta."
 
 #: CRM/Campaign/Form/Task/Reserve.php
 #: templates/CRM/Campaign/Form/Task/Reserve.tpl
@@ -534,74 +537,74 @@ msgstr "Reserva del Participante"
 #: CRM/Campaign/Form/Task/Reserve.php
 msgid "%count contact has been reserved."
 msgid_plural "%count contacts have been reserved."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%count contacto ha sido asignado."
+msgstr[1] "%count contactos han sido asignados."
 
 #: CRM/Campaign/Form/Task/Reserve.php
 msgid "They have been added to %1."
-msgstr ""
+msgstr "Añadidos a %1."
 
 #: CRM/Campaign/Form/Task/Reserve.php
 msgid "Reservation Added"
-msgstr ""
+msgstr "Reserva añadida"
 
 #: CRM/Campaign/Form/Task/Reserve.php
 msgid "Reservation did not add for %count contact."
 msgid_plural "Reservation did not add for %count contacts."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "La reserva no ha sido añadida a %count contacto."
+msgstr[1] "La reserva no ha sido añadida a %count contactos."
 
 #: CRM/Campaign/Info.php
 msgid "administer CiviCampaign"
-msgstr ""
+msgstr "Administrar CiviCampaign"
 
 #: CRM/Campaign/Info.php
 msgid "Create new campaign, survey and petition types and their status"
-msgstr ""
+msgstr "Crear nueva campaña, una nueva encuesta y tipos de peticiones y sus estatus"
 
 #: CRM/Campaign/Info.php
 msgid "manage campaign"
-msgstr ""
+msgstr "gestionar campaña"
 
 #: CRM/Campaign/Info.php
 msgid "Create new campaigns, surveys and petitions, reserve respondents"
-msgstr ""
+msgstr "Crear nuevas campañas, encuestar y peticiones, reservar encuestados"
 
 #: CRM/Campaign/Info.php
 msgid "reserve campaign contacts"
-msgstr ""
+msgstr "asignar contactos de la campaña"
 
 #: CRM/Campaign/Info.php
 msgid "Reserve campaign contacts for surveys and petitions"
-msgstr ""
+msgstr "Reservar contactos de la campaña para encuestas y peticiones"
 
 #: CRM/Campaign/Info.php
 msgid "release campaign contacts"
-msgstr ""
+msgstr "liberar contactos de campaña"
 
 #: CRM/Campaign/Info.php
 msgid "Release reserved campaign contacts for surveys and petitions"
-msgstr ""
+msgstr "Liberar contactos reservados de las campañas para encuestas y peticiones"
 
 #: CRM/Campaign/Info.php
 msgid "interview campaign contacts"
-msgstr ""
+msgstr "Entrevistar contactos de la campaña"
 
 #: CRM/Campaign/Info.php
 msgid "Record survey and petition responses from their reserved contacts"
-msgstr ""
+msgstr "Guardar encuestas y respuestas a peticiones de los contactos reservados"
 
 #: CRM/Campaign/Info.php
 msgid "GOTV campaign contacts"
-msgstr ""
+msgstr "Contactos de la campaña GOTV"
 
 #: CRM/Campaign/Info.php
 msgid "Record that contacts voted"
-msgstr ""
+msgstr "Registrar los contactos que han votado"
 
 #: CRM/Campaign/Info.php
 msgid "sign CiviCRM Petition"
-msgstr ""
+msgstr "firmar Petición CiviCRM"
 
 #: CRM/Campaign/Page/AJAX.php
 msgid "Respondent Reserved."
@@ -679,12 +682,12 @@ msgstr "Buscar Encuesta"
 #: CRM/Campaign/Page/DashBoard.php
 msgid "1 Day"
 msgid_plural "%count Days"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "1 Día"
+msgstr[1] "%count Días"
 
 #: CRM/Campaign/Page/DashBoard.php
 msgid "view result set"
-msgstr ""
+msgstr "Ver conjunto de resultados"
 
 #: CRM/Campaign/Page/DashBoard.php
 msgid "Incomplete. Click to configure result set."
@@ -756,13 +759,13 @@ msgstr "Ya has firmado esta petición."
 msgid ""
 "You have already signed this petition but you still <b>need to verify your "
 "email address</b>."
-msgstr ""
+msgstr "Ya has firmado esta petición, pero todavía <b>necesitas verificar tu dirección de correo electrónico</b>."
 
 #: templates/CRM/Campaign/Form/Petition/Signature.tpl
 msgid ""
 "Please check your email inbox for the confirmation email. If you don't find "
 "it, verify if it isn't in your spam folder."
-msgstr ""
+msgstr "Por favor, comprueba la recepción del correo electrónico de confirmación en tu bandeja de entrada. Si no lo encuentras, verifica la carpeta de correo no deseado."
 
 #: templates/CRM/Campaign/Form/Petition.tpl
 msgid "Are you sure you want to delete this Petition?"
@@ -785,7 +788,7 @@ msgstr "Campos sobre la petición."
 
 #: templates/CRM/Campaign/Form/Petition.tpl
 msgid "Click here for new profile"
-msgstr ""
+msgstr "Haga clic aquí para un nuevo perfil"
 
 #: templates/CRM/Campaign/Form/Petition.tpl
 msgid "This title will be displayed at the top of the thank-you page."
@@ -897,7 +900,7 @@ msgstr "Conjunto de resultados para"
 
 #: templates/CRM/Campaign/Form/Survey/Delete.tpl
 msgid "Are you sure you want to delete the %1 survey?"
-msgstr ""
+msgstr "¿Está seguro de que desea eliminar la encuesta '%1' ?"
 
 #: templates/CRM/Campaign/Form/Survey/Main.tpl
 msgid "Title of the survey."
@@ -905,11 +908,11 @@ msgstr "Título de la encuesta."
 
 #: templates/CRM/Campaign/Form/Survey/Main.tpl
 msgid "Opens New Campaign form in a separate window"
-msgstr ""
+msgstr "Abre un formulario para crear una nueva campaña en una ventana separada"
 
 #: templates/CRM/Campaign/Form/Survey/Main.tpl
 msgid "new campaign"
-msgstr ""
+msgstr "nueva campaña"
 
 #: templates/CRM/Campaign/Form/Survey/Main.tpl
 msgid "Select the campaign for which survey is created."
@@ -963,7 +966,7 @@ msgstr "Presiona sobre el botón de <strong>registrar respuesta</strong> para ac
 
 #: templates/CRM/Campaign/Form/Task/Interview.tpl
 msgid "Survey Report"
-msgstr ""
+msgstr "Informe de encuesta"
 
 #: templates/CRM/Campaign/Form/Task/Interview.tpl
 msgid "Vote"
@@ -971,7 +974,7 @@ msgstr "Vota"
 
 #: templates/CRM/Campaign/Form/Task/Interview.tpl
 msgid "Record Responses for All"
-msgstr ""
+msgstr "Grabar las repuestas para todos"
 
 #: templates/CRM/Campaign/Form/Task/Interview.tpl
 msgid "record response"
@@ -995,7 +998,7 @@ msgstr "Actualizar respuesta"
 
 #: templates/CRM/Campaign/Form/Task/Interview.tpl
 msgid "Update Responses for All"
-msgstr ""
+msgstr "Actualizar respuestas para todos"
 
 #: templates/CRM/Campaign/Form/Task/Interview.tpl
 msgid "reserve"
@@ -1023,7 +1026,7 @@ msgid ""
 "related to a particular fund-raising or engagement effort. You can link "
 "activities, contributions, event participation, mailings, membership "
 "signups, and pledges to a particular campaign."
-msgstr ""
+msgstr "En tu organización puedes utilizar las Campañas para realizar el seguimiento de las interacciones de tus contactos relacionadas con un compromiso o recaudación de fondos particular. Puedes vincular actividades, contribuciones, registros a eventos, envíos de correo electrónico, nuevos miembros y compromisos a una campaña en particular."
 
 #: templates/CRM/Campaign/Form/addCampaignToComponent.tpl
 msgid "Show past campaign(s) in this select list."
@@ -1037,7 +1040,7 @@ msgstr "Actualmente no hay Campañas activas."
 msgid ""
 "If you want to associate this record with a campaign, you can <a %1>create a"
 " campaign here</a>."
-msgstr ""
+msgstr "Si quiere asociar este registro a una campaña, puede <a %1>crear una campaña aquí</a>."
 
 #: templates/CRM/Campaign/Page/Petition/Confirm.tpl
 msgid ""
@@ -1086,7 +1089,7 @@ msgstr "Si no ha recibido un correo electrónico en los próximos minutos, por f
 msgid ""
 "You have already signed this petition but we<strong>need to confirm your "
 "email address</strong>."
-msgstr ""
+msgstr "Usted ya ha firmado esta petición pero  <strong>necesitamos que confirme su dirección de email</strong>."
 
 #: templates/CRM/Campaign/Page/Petition/ThankYou.tpl
 msgid ""
@@ -1117,12 +1120,12 @@ msgstr "No hay tipo de encuesta ingresado. Puedes <a href=\"%1\">añadir una.</a
 
 #: CRM/Campaign/DAO/CampaignGroup.php
 msgid "Campaign Group ID"
-msgstr ""
+msgstr "Identificador del grupo de campaña"
 
 #: CRM/Campaign/DAO/CampaignGroup.php
 msgid "Campaign Group Type"
-msgstr ""
+msgstr "Tipo de grupo de campaña"
 
 #: templates/CRM/Campaign/Page/SurveyType.tpl
 msgid "There are no survey types entered. You can <a href='%1'>add one</a>."
-msgstr ""
+msgstr "No hay ningún tipo de encuesta introducida. Se puede <a href='%1'>añadir una</a>."
