po: update po/es_MX/pledge.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_MX/pledge.po
+++ b/po/es_MX/pledge.po
@@ -3,7 +3,11 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# BernardoPadron <samydron@gmail.com>, 2011
 # Diana <dnava@alternativasociales.org>, 2011
+# Diana <dnava@alternativasociales.org>, 2011
+# ixiam_jose <jrombini@hotmail.com>, 2012
+# joseagrc <jose.arturo.garcia@gmail.com>, 2011
 # joseagrc <jose.arturo.garcia@gmail.com>, 2011
 # ixiam_jose <jrombini@hotmail.com>, 2012
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -12,7 +16,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
+"PO-Revision-Date: 2016-11-04 21:45+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Spanish (Mexico) (http://www.transifex.com/civicrm/civicrm/language/es_MX/)\n"
 "MIME-Version: 1.0\n"
@@ -49,11 +53,11 @@ msgstr "Estado de Compromiso de Pago"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
 msgid "%1 - due on %2 (overdue)"
-msgstr ""
+msgstr "$%1 - debe en %2 (atrasado)"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
 msgid "%1 - due on %2"
-msgstr ""
+msgstr "$%1 - debe un %2"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
 msgid ""
@@ -78,27 +82,27 @@ msgstr "Intervalo de Frecuencia del Compromiso"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Pledge is a Test"
-msgstr ""
+msgstr "Compromiso es una prueba"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Financial Type - %1"
-msgstr ""
+msgstr "Tipo financiero - %1"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Financial Page - %1"
-msgstr ""
+msgstr "Página financiera - %1"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Contact ID %1 %2"
-msgstr ""
+msgstr "ID Contacto %1 %2"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Pledge is a Test?"
-msgstr ""
+msgstr "¿El compromiso es una prueba?"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Please enter valid Pledge Frequency Interval"
-msgstr ""
+msgstr "Por favor ingrese un intervalo de frecuencia de petición válido"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Pledge Frequency"
@@ -106,7 +110,7 @@ msgstr "Frecuencia de Compromiso"
 
 #: CRM/Pledge/DAO/Pledge.php
 msgid "Pledge Contribution Page"
-msgstr ""
+msgstr "Página de contribución del compromiso"
 
 #: CRM/Pledge/DAO/Pledge.php
 msgid "Original Installment Amount"
@@ -114,7 +118,7 @@ msgstr "Monto Original de Cuota"
 
 #: CRM/Pledge/DAO/Pledge.php
 msgid "Pledge Currency"
-msgstr ""
+msgstr "Moneda del compromiso"
 
 #: CRM/Pledge/DAO/Pledge.php CRM/Pledge/DAO/PledgeBlock.php
 msgid "Pledge Frequency Unit"
@@ -122,23 +126,23 @@ msgstr "Unidad de Frecuencia Compromiso"
 
 #: CRM/Pledge/DAO/Pledge.php
 msgid "Pledge day"
-msgstr ""
+msgstr "Día de compromiso"
 
 #: CRM/Pledge/DAO/Pledge.php
 msgid "Pledge Number of Installments"
-msgstr ""
+msgstr "Número de pagos del compromiso"
 
 #: CRM/Pledge/DAO/Pledge.php
 msgid "Pledge Acknowledged"
-msgstr ""
+msgstr "Compromiso reconocido"
 
 #: CRM/Pledge/DAO/Pledge.php
 msgid "Pledge Modified Date"
-msgstr ""
+msgstr "Fecha de modificación del compromiso"
 
 #: CRM/Pledge/DAO/Pledge.php
 msgid "Pledge Cancelled Date"
-msgstr ""
+msgstr "Fecha de cancelación del compromiso"
 
 #: CRM/Pledge/DAO/Pledge.php CRM/Pledge/DAO/PledgeBlock.php
 msgid "Maximum Number of Reminders"
@@ -183,7 +187,7 @@ msgstr "Editar el Pago Programado del Compromiso "
 
 #: CRM/Pledge/Form/Payment.php
 msgid "Pledge Payment Schedule has been updated."
-msgstr ""
+msgstr "Programa de pago del compromiso ha sido actualizado."
 
 #: CRM/Pledge/Form/Pledge.php templates/CRM/Pledge/Form/PledgeView.tpl
 #: xml/templates/message_templates/pledge_acknowledge_html.tpl
@@ -283,7 +287,7 @@ msgstr "Vencimiento de Pago"
 
 #: CRM/Pledge/Form/PledgeView.php
 msgid "View Pledge by"
-msgstr ""
+msgstr "Ver contribución por"
 
 #: CRM/Pledge/Form/Search.php
 msgid "Pledger Name or Email"
@@ -291,7 +295,7 @@ msgstr "Nombre o Correo Electrónico de la persona que se Compromete "
 
 #: CRM/Pledge/Form/Search.php
 msgid "Pledger Name"
-msgstr ""
+msgstr "Nombre del Depositante"
 
 #: CRM/Pledge/Form/Search.php
 msgid "Find Pledges"
@@ -304,8 +308,8 @@ msgstr "Borrar Compromisos"
 #: CRM/Pledge/Form/Task/Delete.php
 msgid "%count pledge deleted."
 msgid_plural "%count pledges deleted."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "% compromiso eliminado."
+msgstr[1] "%s de compromisos eliminados."
 
 #: CRM/Pledge/Form/Task/Print.php
 msgid "Print Pledge List"
@@ -317,27 +321,27 @@ msgstr "CiviCRM Motor de Compromiso  "
 
 #: CRM/Pledge/Info.php
 msgid "access CiviPledge"
-msgstr ""
+msgstr "acceder a CiviMember"
 
 #: CRM/Pledge/Info.php
 msgid "View pledges"
-msgstr ""
+msgstr "Ver compromisos"
 
 #: CRM/Pledge/Info.php
 msgid "edit pledges"
-msgstr ""
+msgstr "Editar compromisos"
 
 #: CRM/Pledge/Info.php
 msgid "Create and update pledges"
-msgstr ""
+msgstr "Crear o actualizar compromisos "
 
 #: CRM/Pledge/Info.php
 msgid "delete in CiviPledge"
-msgstr ""
+msgstr "Elimina en CiviMember"
 
 #: CRM/Pledge/Info.php
 msgid "Delete pledges"
-msgstr ""
+msgstr "Eliminar compromisos"
 
 #: CRM/Pledge/Info.php
 msgid "Your Pledge(s)"
@@ -393,7 +397,7 @@ msgstr "Exportar Compromisos"
 
 #: templates/CRM/Pledge/Form/Payment.tpl
 msgid "Adjust scheduled amount"
-msgstr ""
+msgstr "Ajustar la cantidad programada"
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
@@ -459,7 +463,7 @@ msgstr "Fecha en que se envió el acuse de recibo de este compromiso."
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid "Sets the default financial type for payments against this pledge."
-msgstr ""
+msgstr "Establece el tipo financiero de pagos por defecto, para este compromiso."
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
@@ -478,7 +482,7 @@ msgstr "Los Compromisos aparecen en \"Espera\" hasta que el primer pago que se r
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
 "Click OK to save this Pledge record AND send an acknowledgment to %1 now."
-msgstr ""
+msgstr "Hacer clic en OK para guardar este registro de compromiso Y enviar un acuse de recibo a %1"
 
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "Pledge By"
@@ -522,15 +526,15 @@ msgstr "Si usted está buscando dentro de un rango de fechas o de cantidad, prue
 
 #: templates/CRM/Pledge/Form/Selector.tpl
 msgid "Click arrow to view pledge payments."
-msgstr ""
+msgstr "Haz clic en la flecha para ver los pagos de los compromisos."
 
 #: templates/CRM/Pledge/Form/Selector.tpl
 msgid "Show payments"
-msgstr ""
+msgstr "Ver pagos"
 
 #: templates/CRM/Pledge/Form/Selector.tpl
 msgid "Hide payments"
-msgstr ""
+msgstr "Ocultar pagos"
 
 #: templates/CRM/Pledge/Form/Selector.tpl
 msgid "Find more pledges"
@@ -601,15 +605,15 @@ msgstr "Monto pagado "
 
 #: templates/CRM/Pledge/Page/Payment.tpl
 msgid "Credit Card Payment"
-msgstr ""
+msgstr "Pago con tarjeta de crédito"
 
 #: templates/CRM/Pledge/Page/Payment.tpl
 msgid "Edit Scheduled Payment"
-msgstr ""
+msgstr "Editar calendario de pago"
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid "Payment Reminders"
-msgstr ""
+msgstr "Recordatorios de pago"
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid ""
@@ -628,7 +632,7 @@ msgid ""
 "Your site administrator must configure the scheduled job (Administer > "
 "System Settings > Scheduled Jobs) which updates pledge payment statuses and "
 "sends the reminders."
-msgstr ""
+msgstr "El administrador del sitio debe configurar el trabajo programado (Administrar > Configuración del sistema > Tareas programadas) que actualiza el estado de los pagos de compromisos y envía los recordatorios."
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid ""
@@ -650,7 +654,7 @@ msgstr "Compromisos recibidos de %1 desde el comienzo."
 msgid ""
 "Click <a %1>Add Pledge</a> to record a new pledge received from this "
 "contact."
-msgstr ""
+msgstr "Haz clic en <a %1>Añadir compromiso</a> para grabar un nuevo compromiso recibido de este contacto."
 
 #: templates/CRM/Pledge/Page/Tab.tpl
 msgid "No pledges have been recorded from this contact."
@@ -658,7 +662,7 @@ msgstr "No han sido registrados compromisos de este contacto."
 
 #: templates/CRM/Pledge/Page/Tab.tpl
 msgid "Contributions made in honor of %1"
-msgstr ""
+msgstr "Contribuciones hechas en honor a %1"
 
 #: templates/CRM/Pledge/Page/UserDashboard.tpl
 msgid "Payments"
@@ -790,31 +794,31 @@ msgstr ""
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Pledge Acknowledgement Sent"
-msgstr ""
+msgstr "Agradecimiento del compromiso enviado"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Pledge Acknowledgement  Not Sent"
-msgstr ""
+msgstr "Agradecimiento del compromiso no enviado"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Acknowledgement sent?"
-msgstr ""
+msgstr "¿Enviar agradecimiento?"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Please enter a number"
-msgstr ""
+msgstr "Por favor, introducir un número"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Please enter number."
-msgstr ""
+msgstr "Por favor, introducir número."
 
 #: CRM/Pledge/DAO/PledgeBlock.php
 msgid "Pledge Block ID"
-msgstr ""
+msgstr "ID del bloque del compromiso"
 
 #: CRM/Pledge/DAO/PledgeBlock.php
 msgid "Expose Frequency Interval?"
-msgstr ""
+msgstr "¿Exponer el intervalo de la frecuencia?"
 
 #: CRM/Pledge/DAO/PledgeBlock.php
 msgid "Allow Edits to Recurring Donation Start Date?"
@@ -822,8 +826,8 @@ msgstr ""
 
 #: CRM/Pledge/Task.php
 msgid "Export pledges"
-msgstr ""
+msgstr "Exportar compromisos"
 
 #: templates/CRM/Pledge/Form/Task/Print.tpl
 msgid "Beginning Date"
-msgstr ""
+msgstr "Fecha de inicio"
